- Fixes some spacing issues on buttons

--- a/scss/bitstyles/objects/badge/_.scss
+++ b/scss/bitstyles/objects/badge/_.scss
@@ -21,6 +21,6 @@
 }
 
 .o-badge__button {
-  margin-right: -#{spacing('s') + spacing('xs')};
+  margin-right: -#{spacing('s')};
   margin-left: spacing('xs');
 }
