--- a/scss/bitstyles/objects/badge/settings.scss
+++ b/scss/bitstyles/objects/badge/settings.scss
@@ -1,4 +1,4 @@
 $bitstyle-badge-padding-vertical: spacing('xxs');
 $bitstyle-badge-padding-horizontal: spacing('m');
-$bitstyle-badge-color: '60';
+$bitstyle-badge-color: '80';
 $bitstyle-badge-background-color: '10';
